# migration

./: Cargo.toml  README.md
.github/workflows/: ci.yml  latest.yml
assets/fixtures/: invalid.foxml.xml  valid.foxml.xml  valid.mods.xml
scripts/: corporate.rhai  family.rhai  fields.rhai  genre.rhai  geographic.rhai  language.rhai  person.rhai  physical_form.rhai  subject.rhai  temporal.rhai
scripts/archden/: corporate.rhai  fields.rhai
scripts/modules/: taxonomy.rhai  utilities.rhai
src/: Cargo.toml  args.rs  main.rs
src/csv/: Cargo.toml  lib.rs  map.rs  object.rs  rows.rs  scripts.rs  utils.rs  xml.rs
src/foxml/: Cargo.toml  extensions.rs  lib.rs
src/logger/: Cargo.toml  lib.rs
src/migrate/: Cargo.toml  extensions.rs  identifiers.rs  inline.rs  lib.rs  migrate.rs
src/sql/: Cargo.toml  lib.rs
