[package]
name = "csv"
version = "1.0.0"
authors = ["Nigel Banks <nigel.g.banks@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "csv"
path = "lib.rs"
test = true

[dependencies]
alphanumeric-sort = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
csv-other = { version="1.1.3", package="csv" }
foxml = { path = "../foxml" }
indicatif = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.11"
logger = { path = "../logger" }
maplit = "1.0.2"
quick-xml = { version = "0.18.1", features = [ "serialize" ] }
rayon = "1.3.0"
regex = "1.3.9"
rhai = { version = "0.18.3", features = [ "unchecked", "sync", "no_float", "only_i64", "no_closure" ] }
serde = { version = "1.0.110", features = [ "derive" ] }
serde_json = "1.0"
sha-1 = "0.9.1"
strum = "0.18.0"
strum_macros = "0.18.0"
walkdir = "2.3.1"