[package]
name = "foxml"
version = "1.0.0"
authors = ["Nigel Banks <nigel.g.banks@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "foxml"
path = "lib.rs"
test = true

[dependencies]
alphanumeric-sort = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
quick-xml = { version = "0.18.1", features = [ "serialize" ] }
serde = { version = "1.0.110", features = [ "derive" ] }
strum = "0.18.0"
strum_macros = "0.18.0"