[package]
name = "migrate"
version = "1.0.0"
authors = ["Nigel Banks <nigel.g.banks@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "migrate"
path = "lib.rs"
test = true

[dependencies]
alphanumeric-sort = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.2.0"
filetime = "0.2.12"
foxml = { path = "../foxml" }
lazy_static = "1.4.0"
log = "0.4.11"
logger = { path = "../logger" }
quick-xml = { version = "0.18.1", features = [ "serialize" ] }
rayon = "1.3.0"
regex = "1.3.9"
walkdir = "2.3.1"