[package]
name = "sql"
version = "1.0.0"
authors = ["Nigel Banks <nigel.g.banks@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "sql"
path = "lib.rs"
test = true

[dependencies]
csv = "1.1.3"
indexmap = "1.6.0"
logger = { path = "../logger" }
rayon = "1.3.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.110", features = [ "derive" ] }
serde_php = "0.4.1"
tempfile = "3.1.0"
uuid = { version = "0.8.1", features = ["v4"] }